# money_manager

./: Dockerfile  README.md  data.txt  pyproject.toml
money_manager/: application.logs  core.py  data.txt  functions.py  logger.py  run.py
