[tool.poetry]
name = "money-manager"
version = "0.1.0"
description = ""
authors = ["Laplas00 <20helllucifer02@gmail.com>"]
readme = "README.md"
packages = [{include = "money_manager"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
