[tool.poetry]
name = "money-manager"
version = "0.1.0"
description = "money management"
authors = ["Laplas00 <20helllucifer02@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "money_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
